fixed about tab and unauthed history misalignment

--- a/react-app/pomodoro-timer-ui/src/Components/AboutTab/AboutTab.css
+++ b/react-app/pomodoro-timer-ui/src/Components/AboutTab/AboutTab.css
@@ -50,6 +50,7 @@
 
 .our-team p {
   margin: 0px;
+  margin-right: 180px;
 }
 
 .our-team a {
